--- a/public/index.html
+++ b/public/index.html
@@ -13,18 +13,19 @@
 <body>
     <!-- Header -->
     <header>
-        <nav class="navbar" role="navigation" aria-labelledby="RebootSrMainMenuNav" id="main-navbar">
+        <nav class="navbar" role="navigation" aria-labelledby="RobloxIrelandNavbar" id="main-navbar">
             <div class="container">
                 <div class="navbar-header">
-                    <a href="#" class="navbar-logo">
-                        <img src="img/logo.png" alt="Youth Foreign Policy Network Logo">
+                    <a href="/" class="navbar-logo">
+                        <img src="img/logo.png" alt="Roblox Ireland Logo">
                     </a>
                 </div>
                 <div class="navbar-links">
                     <ul class="nav">
-                        <li><a href="/en/search/?sort_by=published_date&type=press_releases">News</a></li>
-                        <li><a href="/en/help/departments/">Teams</a></li>
-                        <li><a href="/en/services/">Services</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#agencies">Agencies</a></li>
+                        <li><a href="#politics">Politics</a></li>
+                        <li><a href="#development">Development</a></li>
                         <li><a href="/pages/signin.html">Log in</a></li>
                     </ul>
                 </div>
@@ -32,48 +33,51 @@
         </nav>
     </header>
 
-    <!-- Hero Banner with Background Image and Search -->
-    <div class="hero-banner" style="background-image: url('img/hero-background.jpg');">
-        <div class="hero-content">
-            <h1>Empowering Youth in Foreign Policy</h1>
-            <p>Engage with resources and gain insights to drive meaningful change.</p>
-            <div class="search-bar">
-                <form action="/en/search/" method="GET">
-                    <input type="text" class="form-control" name="q" placeholder="Enter search term" aria-label="Search">
-                    <button class="btn btn-state-gold">Search</button>
-                </form>
+    <!-- Main Content -->
+    <main>
+        <!-- Introduction Section -->
+        <section id="about" class="intro">
+            <div class="intro-content">
+                <h1>Welcome to Roblox Ireland</h1>
+                <p>Our flagship map, Bridgend, has been released! Explore the virtual world of Ireland on Roblox and experience our vibrant culture, politics, and development.</p>
+                <a href="https://www.roblox.com/games/123456789/Bridgend" class="btn play-button">Play Bridgend</a>
             </div>
-        </div>
-    </div>
+        </section>
 
-    <!-- Latest News Section with rounded, side-by-side cards -->
-    <section class="latest-news">
-        <h2>Latest News</h2>
-        <div class="news-grid">
-            <div class="news-item">
-                <img src="img/news1.jpg" alt="News Image">
-                <h3>Trump's Second Term Poised to Reshape the World</h3>
-                <p>Trump's victory ushers in uncertainty, with global leaders bracing for the impact.</p>
+        <!-- Agencies Section -->
+        <section id="agencies" class="page-section" style="background-image: url('img/agencies-bg.jpg');">
+            <div class="section-content">
+                <h2>Agencies</h2>
+                <p>Learn about the different agencies that keep Ireland running smoothly on Roblox.</p>
+                <a href="agencies.html" class="btn">Explore Agencies</a>
             </div>
-            <div class="news-item">
-                <img src="img/news2.jpg" alt="News Image">
-                <h3>Headline 2</h3>
-                <p>Brief details on the second highlighted news...</p>
+        </section>
+
+        <!-- Politics Section -->
+        <section id="politics" class="page-section" style="background-image: url('img/politics-bg.jpg');">
+            <div class="section-content">
+                <h2>Politics</h2>
+                <p>Discover the inner workings of the Irish political system within Roblox and how the government operates.</p>
+                <a href="politics.html" class="btn">Explore Politics</a>
             </div>
-            <div class="news-item">
-                <img src="img/news3.jpg" alt="News Image">
-                <h3>Headline 3</h3>
-                <p>A quick summary of the third news post...</p>
+        </section>
+
+        <!-- Development Section -->
+        <section id="development" class="page-section" style="background-image: url('img/development-bg.jpg');">
+            <div class="section-content">
+                <h2>Development</h2>
+                <p>Get an inside look at the development process behind Roblox Ireland, including future updates and features.</p>
+                <a href="development.html" class="btn">Explore Development</a>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
     <!-- Footer -->
     <footer>
         <div class="footer-content">
             <div class="footer-left footer-section">
-                <img src="/img/logo.png" alt="YFPN Logo" class="footer-logo" />
-                <p>&copy; Youth Foreign Policy Network. All Rights Reserved</p>
+                <img src="/img/logo.png" alt="Roblox Ireland Logo" class="footer-logo" />
+                <p>&copy; Roblox Ireland. All Rights Reserved</p>
             </div>
             <div class="footer-middle footer-section">
                 <h3>Company</h3>
@@ -85,11 +89,11 @@
                 </div>
             </div>
             <div class="footer-right footer-section">
-                <h3>Connect with us</h3>
+                <h3>Connect with Us</h3>
                 <div class="social-icons">
-                    <a href="https://twitter.com/a"><i class="fab fa-twitter"></i></a>
-                    <a href="https://tiktok.com/@"><i class="fab fa-tiktok"></i></a>
-                    <a href="https://instagram.com/youthforeignpolicynetwork/"><i class="fab fa-instagram"></i></a>
+                    <a href="https://twitter.com/RobloxIreland"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.tiktok.com/@robloxireland"><i class="fab fa-tiktok"></i></a>
+                    <a href="https://www.instagram.com/robloxireland/"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="dark-mode-toggle">
