--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,193 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <script src="/javascript/theme.js" defer></script>
+    <style>
+        /* Global Styles */
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+            color: #333;
+        }
+
+        header {
+            background-color: #004d00;
+            color: #fff;
+            padding: 15px 0;
+        }
+
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 20px;
+        }
+
+        .navbar-logo img {
+            height: 50px;
+        }
+
+        .navbar-links ul {
+            list-style: none;
+            display: flex;
+            margin: 0;
+            padding: 0;
+        }
+
+        .navbar-links li {
+            margin-left: 20px;
+        }
+
+        .navbar-links a {
+            text-decoration: none;
+            color: #fff;
+            font-weight: bold;
+            font-size: 16px;
+        }
+
+        .navbar-links a:hover {
+            color: #ffcc00;
+        }
+
+        /* Hero Section */
+        .intro {
+            background: url('img/hero-background.jpg') no-repeat center center/cover;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            color: white;
+        }
+
+        .intro-content h1 {
+            font-size: 48px;
+            font-weight: 700;
+        }
+
+        .intro-content p {
+            font-size: 20px;
+            margin: 20px 0;
+        }
+
+        .play-button {
+            padding: 12px 30px;
+            background-color: #ffcc00;
+            color: #333;
+            font-size: 18px;
+            font-weight: bold;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .play-button:hover {
+            background-color: #ff9900;
+        }
+
+        /* Sections */
+        .page-section {
+            padding: 60px 20px;
+            color: white;
+            text-align: center;
+            background-size: cover;
+            background-position: center;
+            border-bottom: 5px solid #fff;
+            margin: 20px 0;
+        }
+
+        .section-content h2 {
+            font-size: 36px;
+            margin-bottom: 15px;
+        }
+
+        .section-content p {
+            font-size: 18px;
+            margin-bottom: 20px;
+        }
+
+        .btn {
+            padding: 12px 30px;
+            background-color: #004d00;
+            color: white;
+            text-decoration: none;
+            font-size: 18px;
+            border-radius: 5px;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn:hover {
+            background-color: #006600;
+        }
+
+        /* Footer */
+        footer {
+            background-color: #222;
+            color: #fff;
+            padding: 40px 0;
+        }
+
+        .footer-content {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .footer-left,
+        .footer-middle,
+        .footer-right {
+            flex: 1;
+            padding: 0 20px;
+        }
+
+        .footer-links a {
+            display: block;
+            color: #fff;
+            text-decoration: none;
+            margin-bottom: 10px;
+            font-size: 16px;
+        }
+
+        .footer-links a:hover {
+            color: #ffcc00;
+        }
+
+        .social-icons a {
+            color: #fff;
+            margin-right: 15px;
+            font-size: 20px;
+        }
+
+        .social-icons a:hover {
+            color: #ffcc00;
+        }
+
+        .dark-mode-toggle {
+            margin-top: 20px;
+        }
+
+        /* Dark Mode */
+        body[data-theme="dark"] {
+            background-color: #121212;
+            color: #e0e0e0;
+        }
+
+        body[data-theme="dark"] header {
+            background-color: #333;
+        }
+
+        body[data-theme="dark"] .btn {
+            background-color: #006600;
+        }
+
+        body[data-theme="dark"] footer {
+            background-color: #121212;
+        }
+    </style>
 </head>
 
 <body>
