--- a/public/index.html
+++ b/public/index.html
@@ -1,130 +1,123 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About | Roblox Ireland</title>
-    <link rel="icon" href="img/logo.png" sizes="32x32" type="image/png">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <script src="javascript/theme.js" defer></script>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Fáiltenet</title>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
-
 <body>
     <!-- Header -->
     <header>
-        <nav class="navbar" role="navigation" aria-labelledby="main-nav">
-            <div class="container">
-                <div class="navbar-header">
-                    <a href="#" class="navbar-logo">
-                        <img src="img/logo.png" alt="Roblox Ireland Logo">
-                    </a>
-                </div>
-                <div class="navbar-links">
-                    <ul class="nav">
-                        <li><a href="/about.html" class="active">About</a></li>
-                        <li><a href="/agencies.html">Agencies</a></li>
-                        <li><a href="/politics.html">Politics</a></li>
-                        <li><a href="/development.html">Development</a></li>
-                        <li><a href="/misc.html">Misc</a></li>
-                    </ul>
-                </div>
-            </div>
+        <div class="logo">
+            <a href="https://www.rxireland.org"><img src="/assets/icons/logo.png" alt="Logo"> </a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#">Statue Book</a></li>
+                <li><a href="#">Elections</a></li>
+                <li><a href="#">Top Secret</a></li>
+                <li><a href="https://discord.gg/p2uPdU5QxP">Discord</a></li>
+            </ul>
         </nav>
     </header>
 
     <!-- Hero Section -->
-    <section class="hero-section">
-        <div class="container">
-            <h1 class="section-title">Welcome to Roblox Ireland</h1>
-            <p class="hero-description">Explore the flagship map Bridgend, immerse yourself in Ireland’s dynamic community, and take part in shaping the future of Roblox Ireland!</p>
-            <a href="/bridgend" class="cta-button">Play Bridgend</a>
+    <section class="hero">
+        <div class="hero-text">
+            <h1>Fáilte go hÉireann</h1>
+            <p>The land of a thousand welcomes and twice as many begrudgers</p>
+            <a href="https://discord.gg/p2uPdU5QxP" class="cta-btn">Join us today!</a>
         </div>
     </section>
 
-    <!-- About the Project -->
-    <section class="about-section">
-        <div class="container">
-            <h2 class="section-title">About Our Mission</h2>
-            <p class="section-description">
-                Roblox Ireland is more than just a game. It is a community-driven virtual space where players can engage in governance, explore digital representations of Ireland, and create a robust, immersive experience. Our mission is to provide a platform where creativity, diplomacy, and teamwork come together to build a unique virtual world.
-            </p>
-            <div class="about-cards">
-                <div class="about-card">
-                    <i class="fas fa-flag"></i>
-                    <h3>Explore Bridgend</h3>
-                    <p>Our flagship map, Bridgend, is the heart of Roblox Ireland, offering exciting gameplay and an opportunity to be part of the community.</p>
+    <!-- Bridgend Section -->
+    <section class="bridgend">
+        <div class="content">
+            <h2>Bridgend</h2>
+            <p>A charming town in Donegal, nestled on the border with County Derry. Bridgend offers more than breathtaking scenery—it is a dynamic community brimming with opportunities for those eager to grow their careers in a vibrant setting.</p>
+            <div class="bridgend-details">
+                <div class="detail">
+                    <h3>History</h3>
+                    <p>Bridgend was founded in the 17th century and has grown into a vibrant community full of history and heritage.</p>
                 </div>
-                <div class="about-card">
-                    <i class="fas fa-users"></i>
-                    <h3>Community Engagement</h3>
-                    <p>Get involved with the community, whether it’s through local governance, development, or just enjoying the collaborative experience of building together.</p>
-                </div>
-                <div class="about-card">
-                    <i class="fas fa-globe"></i>
-                    <h3>Global Connections</h3>
-                    <p>Roblox Ireland strives to connect players worldwide by offering a shared experience of Irish culture and history, within the context of a global virtual community.</p>
+                <div class="detail">
+                    <h3>Gameplay Features</h3>
+                    <p>Features of Gameplay of Bridgend, idk? dynamic loans or whatever</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Vision Section -->
-    <section class="vision-section">
-        <div class="container">
-            <h2 class="section-title">Our Vision</h2>
-            <p class="vision-description">
-                We envision a future where Roblox Ireland becomes a model for virtual nation-building, fostering creativity, diplomacy, and cooperation. Players will not only build but also influence the direction of this ever-growing world.
-            </p>
-            <div class="vision-media">
-                <video controls>
-                    <source src="videos/roblox-ireland-vision.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
+    <!-- Upcoming Events Section -->
+    <section class="events">
+        <div class="content">
+            <h2>Upcoming Events</h2>
+            <div class="event-list">
+                <div class="event">
+                    <h3>Irish Festival - 2025</h3>
+                    <p>Join us for a lively celebration of Irish culture in this immersive event.</p>
+                    <a href="#" class="event-btn">Learn More</a>
+                </div>
+                <div class="event">
+                    <h3>Roleplay Battle - 2025</h3>
+                    <p>Engage in a thrilling roleplay battle with your fellow players.</p>
+                    <a href="#" class="event-btn">Learn More</a>
+                </div>
+                <div class="event">
+                    <h3>Character Creation Workshop</h3>
+                    <p>Join us to create and develop your perfect character for upcoming roleplay scenarios.</p>
+                    <a href="#" class="event-btn">Learn More</a>
+                </div>
             </div>
         </div>
     </section>
 
-    <!-- Call to Action -->
-    <section class="cta-section">
-        <div class="container">
-            <h2 class="section-title">Join Roblox Ireland Today</h2>
-            <p>Whether you're a builder, player, or aspiring leader, there’s a place for you in Roblox Ireland. Be part of the adventure and contribute to shaping the future.</p>
-            <a href="/bridgend" class="cta-button">Play Bridgend Now</a>
+    <!-- Latest News Section -->
+    <section class="latest-news">
+        <div class="content">
+            <h2>Latest News</h2>
+            <div class="news-list">
+                <div class="news-item">
+                    <h3>New Roleplay Features Released!</h3>
+                    <p>We've added new interactive features to enhance your roleplaying experience in Bridgend.</p>
+                    <a href="#" class="news-btn">Read More</a>
+                </div>
+                <div class="news-item">
+                    <h3>Community Event Recap</h3>
+                    <p>Check out the highlights from our recent Irish Festival and the unforgettable moments shared.</p>
+                    <a href="#" class="news-btn">Read More</a>
+                </div>
+                <div class="news-item">
+                    <h3>Character Customization Update</h3>
+                    <p>We've just released a new set of character customization options for our roleplayers.</p>
+                    <a href="#" class="news-btn">Read More</a>
+                </div>
+            </div>
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer>
-        <div class="footer-content">
-            <div class="footer-left footer-section">
-                <img src="img/logo.png" alt="Roblox Ireland Logo" class="footer-logo" />
-                <p>&copy; 2025 Roblox Ireland. All Rights Reserved.</p>
-            </div>
-            <div class="footer-middle footer-section">
-                <h3>Company</h3>
-                <div class="footer-links">
-                    <a href="#careers">Careers</a>
-                    <a href="#mediacentre">Media Centre</a>
-                    <a href="#privacy">Privacy Policy</a>
-                    <a href="#contact">Contact Us</a>
-                </div>
-            </div>
-            <div class="footer-right footer-section">
-                <h3>Connect with Us</h3>
-                <div class="social-icons">
-                    <a href="https://twitter.com/RobloxIreland"><i class="fab fa-twitter"></i></a>
-                    <a href="https://instagram.com/robloxireland"><i class="fab fa-instagram"></i></a>
-                    <a href="https://discord.com/RobloxIreland"><i class="fab fa-discord"></i></a>
-                </div>
-            </div>
-            <div class="dark-mode-toggle">
-                <label for="dark-mode-switch">Dark Mode</label>
-                <input type="checkbox" id="dark-mode-switch" aria-label="Toggle Dark Mode">
-            </div>
+    <!-- National Archives Section -->
+    <section class="national-archives">
+        <div class="content">
+            <h2>National Archives</h2>
+            <p>Explore the rich history of Bridgend and Ireland through our National Archives. Access documents, stories, and historical events that have shaped the city and its people.</p>
+            <a href="../html/statues/statues.html" class="cta-btn">Visit Archives</a>
         </div>
-    </footer>
+    </section>
 
-    <script src="javascript/callback.js"></script>
+<!-- Footer -->
+<footer>
+    <div class="footer-links">
+        <a href="#">Terms of Service</a>
+        <a href="#">Privacy Policy</a>
+        <a href="https://www.roblox.com/communities/15725709/Ireland#!/about">Roblox Group</a>
+        <a href="https://discord.gg/p2uPdU5QxP">Discord</a>
+    </div>
+    <p>&copy; 2025 y_orkist, All Rights Reserved. Roblox is the registered trademark of Roblox Corporation.</p>
+</footer>
+
 </body>
 </html>
