--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
                 <div class="navbar-header">
                     <a href="https://rxireland.org" navbar-logo-width="">
                         <link rel="preload" as="image" href="/static/_reboot/_reboot_app/img/Image_Logo.png" fetchpriority="high">
-                        <img src="img/failtenet.png" alt="gov - Irish Government logo">
+                        <img src="img/irelandroblox.png" alt="gov - Irish Government logo">
                     </a>
                 </div>
                 <div class="collapse navbar-collapse" id="RebootMainMenu">
